flux/manifests/03-services/elastic/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
  labels:
    app.kubernetes.io/name: elastic-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
  labels:
    app.kubernetes.io/name: elastic
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
